<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flOuter"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#ff888888">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:scaleType="center" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivSelection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="0dp"
                android:src="@drawable/selection_normal" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp"
        android:weightSum="100">


        <LinearLayout
            android:id="@+id/standard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33.33"
            android:background="@drawable/wallpaper_set_button_style"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:src="@drawable/standard" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:text="STANDARD" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fixed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33.33"
            android:background="@drawable/wallpaper_set_button_style"
            android:clickable="true"

            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_gravity="bottom"
                android:src="@drawable/fixed" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:text="FIXED" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/entire"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="33.33"
            android:background="@drawable/wallpaper_set_button_style"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="2dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:src="@drawable/entire" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center_horizontal"
                android:text="ENTIRE" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/btnOverall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textOff="@string/overall"
            android:textOn="@string/overall" />

        <Button
            android:id="@+id/btnSetWallPaper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.5"
            android:text="@string/wallpaper_set" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="0.5"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>
	