<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/flOuter"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="#666">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:scaleType="center" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivSelection"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="0dp"
                android:src="@drawable/selection_normal" />
        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:orientation="vertical">-->

        <!--<ImageView-->
        <!--android:id="@+id/ivSelection2"-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="fill_parent"-->
        <!--android:layout_margin="0dp"-->
        <!--android:src="@drawable/selection_normal_2" />-->

        <!--</LinearLayout>-->

    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="0.5"
                    android:background="@drawable/tab_normal_style"
                    android:text="@string/cancel"
                    android:textColor="#666" />

                <Button
                    android:id="@+id/btnSetWallPaper"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="0.5"
                    android:background="@drawable/tab_clicked_style"
                    android:text="@string/wallpaper_set"
                    android:textColor="#00ACC1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="10dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="10dp"
                android:weightSum="100">


                <LinearLayout

                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="33.33"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/standard"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:background="@drawable/wallpaper_set_button_style"
                        android:clickable="true"
                        android:src="@drawable/standard" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_horizontal"
                        android:text="STANDARD" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="33.33"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/fixed"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/fixed" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_horizontal"
                        android:text="FIXED" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="33.33"

                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="2dp">

                    <ImageView
                        android:id="@+id/entire"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:src="@drawable/entire" />

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:gravity="center_horizontal"
                        android:text="ENTIRE" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingBottom="20dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp">

                <CheckBox
                    android:id="@+id/checkBoxScrollable"
                    style="@style/CustomCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Scrollable Wallpaper" />
            </LinearLayout>

        </LinearLayout>


        <com.google.android.gms.ads.AdView
            android:id="@+id/adViewSetWallpaper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_id" />

    </LinearLayout>

</LinearLayout>
	